syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.netVlad";
option java_outer_classname = "NetVladProto";
option objc_class_prefix = "sendImg";

package netVlad;

// The greeting service definition.
service NetConnect {
  // Sends a greeting
    rpc img2vec (NetRequest) returns (NetResponse) {}
}


// The request message containing the user's name.
message NetRequest {
    string netType =1; // the kind of CNN net to process the image
    bytes img = 2;
}


// The response message containing the greetings
message NetResponse {
    string flag= 1;//response status
    repeated float vec =2;
}
